tests/errors/err_mixed_numeric_multiply.mix
// ERROR: to int and float
main()
    count = 4
    scale = 0.5
    value!: float = count * scale
    print(value)
